--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <script>
     function logout() {
-        localStorage.setItem("login") = false
+        localStorage.setItem("login", false)
     }
 </script>
 
