--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script>
     function logout() {
         localStorage.setItem("login", false)
+        document.location.href = "login.html";
     }
 </script>
 
