--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script type="text/javascript" src="../asset/function.js"></script>
+    <link rel="stylesheet" href="../asset/style.css">
 </head>
 <script>
     if (localStorage.getItem("login") != "true") {
