--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Phonkornkrit Profile</title>
     <link rel="stylesheet" href="../asset/style.css">
     <script type="text/javascript" src="../asset/function.js"></script>
     <script type="text/javascript" src="./asset/font-icon.js"></script>
