commit to test responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <div class="am-context center">
                     <h1 class="main-heading">Phonkornkrit Pruetthiwongwanich</h1>
                     <h4>
-                        <i class="fas fa-mobile-alt"></i> +6686-453-6156
+                        <a class="email" href="tel:+66-86453-6156">
+                            <i class="fas fa-mobile-alt"></i> +6686-453-6156
+                        </a>
                         <a class="email" href="mailto: phonkornkrit@gmail.com">
                             <i class="fas fa-envelope"></i> phonkornkrit@gmail.com
                         </a>
