--- a/login.html
+++ b/login.html
@@ -6,21 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script type="text/javascript" src="../asset/function.js"></script>
     <link rel="stylesheet" href="../asset/style.css">
+    <script type="text/javascript" src="../asset/function.js"></script>
+    <script type="text/javascript" src="./asset/font-icon.js"></script>
 </head>
 
 <body>
-    <div id="username">
-        <label for="username">Username</label>
-        <input type="text" name="username" id='inp_username'>
+    <div class="container center">
+        <h2>Welcome to Robot Framework Playground</h2>
+        <div>
+            <div id="username">
+                <label for="username">Username: </label>
+                <input type="text" name="username" id='inp_username'>
+            </div>
+            <div id="password">
+                <label for="pass">Password: </label>
+                <input type="password" name="pass" id='inp_password'>
+            </div>
+            <button onclick="signin()">Sign In</button>
+            <p id='login_result'></p>
+        </div>
     </div>
-    <div id="password">
-        <label for="pass">Password</label>
-        <input type="password" name="pass" id='inp_password'>
-    </div>
-    <button onclick="signin()">Sign In</button>
-    <p id='login_result'></p>
 </body>
 
 
