add data table section

--- a/home.html
+++ b/home.html
@@ -92,7 +92,8 @@
                     <p id="tran-stat"></p>
                 </center>
             </section>
-            <!-- <section>
+            <section>
+                <h3 class="topic-header">Data Table</h3>
                 <center>
                     <table id="data">
                         <thead>
@@ -105,13 +106,13 @@
                             </tr>
                         </thead>
                         <tbody id="table-content">
-                            <tr>
+                            <tr id="no-data">
                                 <td colspan="5" style="text-align: center;">No data</td>
                             </tr>
                         </tbody>
                     </table>
                 </center>
-            </section> -->
+            </section>
         </div>
     </div>
     <div>
