add div in agreeForm

--- a/home.html
+++ b/home.html
@@ -78,10 +78,14 @@
                     </div>
                     <br>
                     <div id="agreeForm" class="input-field">
-                        <input id="agreement" name="agreement" type="checkbox"><span class="require">*</span>
-                        <label id="agreement" for="agreement">Agree to insert data</label>
-                        <input id="agreement" name="agreement" type="checkbox"><span class="require">*</span>
-                        <label id="agreement" for="agreement">Confirm document is valid </label>
+                        <div>
+                            <input id="agreement" name="agreement" type="checkbox"><span class="require">*</span>
+                            <label id="agreement" for="agreement">Agree to insert data</label>
+                        </div>
+                        <div>
+                            <input id="agreement" name="agreement" type="checkbox"><span class="require">*</span>
+                            <label id="agreement" for="agreement">Confirm document is valid </label>
+                        </div>
                     </div>
                     <br>
                     <button class="confirm-btn" onclick="confirmProfile()">Confirm</button>
